--- a/111.html
+++ b/111.html
@@ -2,7 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>yige</title>
+    <title>wo</title>
+    <script>
+        var percent = 0;
+        var title = "wo";
+        var time = setInterval(function () {
+            if(percent>=100){
+                document.title;
+                clearInterval(timer);
+                }else{
+                     percent = percent+1;
+                     document.title ='【'+percent+'%】'+title;
+                     }
+            },1000);
+        </script>
 </head>
 <body>
 
@@ -14,14 +27,24 @@
     <br> <input type="submit" value="提交">
 </form>
 
+<!--<p>这是注释</p>-->
 
+<button>周&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欣</button>
+
+<input value="fuck&nbsp;&quot;yinhao&quot;">
+
+<div title="fuck">
+  <a href=111.html>案例 </a>
+</div>
+<div>
 <h1>我是第一</h1>
-<h2>我是第二</h2>是第三</h3>
+</div>
+  <h2>我是第二</h2>是第三</h3>
 <h4>我是第四</h4>
 <a href="http://www.baidu.com">
-    <p>我的第一个段落！！！</p>
-    <img src="images/img.jpg" width="282" height="300"/>
-    <p>这是一个段落。</p>
-    <p>这是另外一个段落。</p>
+  <p>我的第一个段落！！！</p>
+  <img src="images/img.jpg" width="282" height="300"/>
+  <p>这是一个段落。</p>
+  <p>这是另外一个段落。</p>
 </body>
 </html>
